menambahkan efek parallax

--- a/index.html
+++ b/index.html
@@ -63,22 +63,21 @@
             </div>
             <div class="row text-justify">
                 <div class="col-sm-5 col-sm-offset-1">
-                    <h4 class="text-center">
+                    <h4 class="pKiri text-center">
                         Halo semuanya, perkenalkan nama saya
                     </h4>
-                    <h3 class="text-center">
+                    <h3 class="pKiri text-center">
                         Ilham Ahmad Fahrizal
                     </h3>
-                    <p>
+                    <p class="pKiri">
                         Saya seorang Junior Web Developer, menyukai Cyber Security
                         dan Sistem Operasi Linux. Saya sedang berkuliah di Universitas Gunadarma dan
                         aktif mengikuti kegiatan kampus yaitu komunitas CCUG (Cyber Security
                         Universitas Gunadarma).
                     </p>
-
                 </div>
                 <div class="col-sm-5">
-                    <p>
+                    <p class="pKanan">
                         <i class="glyphicon glyphicon-calendar"></i> 15 Juli 1999 <br>
                         <i class="glyphicon glyphicon-earphone"></i> +62852-8012-0079 <br>
                         <i class="glyphicon glyphicon-envelope"></i> ilham.ahmadfahrizal@gmail.com <br>
